# canopy

./: .dockerignore  .gitignore  .gitmodules  .space.kts  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile  LICENSE  README.md
.github/workflows/: jekyll-gh-pages.yml
_cmake/: Find_adaptivecpp.cmake  Find_boost.cmake  Find_flatbuffers.cmake  Find_googletest.cmake  Find_jemalloc.cmake  Find_mkl.cmake  Find_openmp.cmake  Find_tcmalloc.cmake  Findnlohmann_json.cmake  helpers.cmake
cmake/: Find_boost.cmake  build-info.cmake  canopy-config.cmake.in  canopy.pc.in  common-flags.cmake
docker/: Dockerfile  cuda.Dockerfile  generic.Dockerfile
docker/apt-sources/: intel-lz-deb.list
docker/entrypoints/: set-perms-exec-sshd.sh  set-perms-exec.sh
docker/scripts/: set-dri-permissions.sh  set-dri-perms.sh
docs/: Dockerfile  Doxyfile  header.html  nginx.conf  stack.yml
examples/: CMakeLists.txt
examples/add_vectors/: CMakeLists.txt  add_vectors.cpp
examples/bruteforce_nbody/: CMakeLists.txt  bruteforce_nbody.cpp  bruteforce_nbody.h  model.h
include/: canopy-cpp.h  canopy.h
scripts/: run-bdd.sh  run-pdag.sh
src/: CMakeLists.txt  README.md  canopy.cpp
src/api/: CMakeLists.txt  api.h  canopy.h  io.h  mef.h
src/bitwise/: CMakeLists.txt  bar.h  bit_array.cpp  bit_array.h  bit_macros.h  bit_ops.cpp  bit_ops.h
src/bitwise/bar/: bar_compare.h  bar_constants.h  bar_file.h  bar_getset.h  bar_region.h  bar_shift.h  bar_shuffle.h  bar_string.h  bit_array.h
src/bool/: AndPlane.h  Bool.cpp  CMakeLists.txt  F.h  LogicBlock.h  OpPlane.h  OrPlane.h  PROFILE.md  README.md  bits.h  bool.cpp  compute.h  device_info.h  events.h  kaplan_et.cpp  term.h  working_set.h
src/bool/pla/: LogicBlock.h  PLA.h
src/bool/stats/: stats.h
src/boolexpr/: CMakeLists.txt  expression.h  fmt.h  node.h  operator.h  transform.h  util.h
src/boolexpr/transform/: conjoin.h  disjoin.h  negate.h  simplify.h  substitute.h  to.h
src/boolexpr/transform/simplify/: constant_folding.h  double_negation.h
src/boolexpr/transform/util/: visit_result.h
src/boolexpr/util/: arena.h  helper_concepts.h  name_indexer.h
src/cli/: CMakeLists.txt  cmdline.h  entrypoint.h
src/cli/eval/: CMakeLists.txt  argparse.h  args.h  main.cpp
src/core/: CMakeLists.txt  analysis.cc  layer.h  main.cpp  node.h  working_set.h
src/core/kernel/: basic_event.h  gate.h  tally.h
src/core/queue/: kernel_builder.h  layer_manager.h  queueable.h
src/expr/: CMakeLists.txt  builder.cpp  builder.h  node.cpp  node.h  op.h
src/io/: CMakeLists.txt  json.h  parser.cpp  parser.h  pla.h
src/io/schema/: schema_v1.fbs
src/io/xml/: CMakeLists.txt  document.cpp  document.h  element.cpp  element.h  error.cpp  error.h  helpers.h  range.cpp  range.h  validator.cpp  validator.h  xml.cpp  xml.h  xml_error.h
src/mef/: CMakeLists.txt
src/mef/canopy/schema/: README.md  pla.h  schema_v1.fbs  schema_v1_generated.h
src/mef/openpsa/: CMakeLists.txt  LICENSE  README.md  algorithm.h  alignment.h  ccf_group.h  cycle.h  element.h  env.h  error.h  event.cpp  event.h  event_tree.h  expression.h  fault_tree.h  find_iterator.h  initializer.cpp  initializer.h  instruction.h  linear_set.h  model.h  multi_index.h  parameter.h  phase.h  settings.h  substitution.h  variant.h
src/mef/openpsa/event/: basic_event.cpp  basic_event.h  event.cpp  event.h  formula.cpp  formula.h  gate.h  house_event.cpp  house_event.h
src/mef/openpsa/expr/: boolean.h  conditional.h  constant.h  exponential.h  extern.h  numerical.h  random_deviate.h  test_event.h
src/nbits/: 8bits.h  CMakeLists.txt  bits8.h  nbits.h
src/sampler/: CMakeLists.txt  RunningStats.cpp  Sampler.h  Stats.h  importance.h  random.h  sampler.cpp  sampler.h  stats.h  stub.cpp
src/scram/: CMakeLists.txt  alignment.cc  analysis.cc  analysis.h  bdd.cc  bdd.h  ccf_group.cc  ccf_group.h  cycle.h  direct_eval.h  element.h  error.h  event.cc  event.h  event_tree.cc  event_tree.h  event_tree_analysis.cc  event_tree_analysis.h  expression.cc  fault_tree.cc  fault_tree_analysis.cc  fault_tree_analysis.h  importance_analysis.h  initializer.cc  initializer.h  instruction.h  mocus.cc  mocus.h  model.cc  model.h  parameter.cc  parameter.h  pdag.cc  pdag.h  preprocessor.cc  preprocessor.h  probability_analysis.cc  probability_analysis.h  reporter.cc  reporter.h  (+12 more)
src/scram-cli/: CMakeLists.txt  main.cpp
src/scram-cli/utils/: CMakeLists.txt  ConstructOptions.h  ConstructSettings.h  ParseArguments.h  RunScram.h  XmlLogger.h
src/scram/expression/: boolean.h  conditional.h  constant.h  exponential.cc  exponential.h  extern.h  numerical.cc  numerical.h  random_deviate.cc  random_deviate.h  test_event.cc  test_event.h
src/scram/ext/: version.cc
src/tree/: CMakeLists.txt  kaplan_et.cpp
src/utils/: CMakeLists.txt  bits.h  checks.h  device_info.h  helpers.h  json.h  profile.h  profiler.h  random.h  stats.cpp  stats.h  stopwatch.h  types.h
tests/: CMakeLists.txt
tests/bitwise/: CMakeLists.txt  bar_tests.cpp  bit_ops_tests.cpp
tests/bool/: BoolBaseTests.cpp  CMakeLists.txt  bit_ops_tests.cpp  bool_eval_tests.cpp  bool_tests.cpp  test_bitwise.cpp  test_bool.cpp  test_set_F.cpp
tests/boolexpr/: CMakeLists.txt  basic.cpp
tests/common/: reset.hpp
tests/core/: CMakeLists.txt  analysis_test.cpp  settings_test.cpp
tests/device_compilation/: CMakeLists.txt  device_compilation_tests.cpp
tests/ext/: CMakeLists.txt  algorithm_test.cpp  combination_test.cpp  find_iterator_test.cpp  float_compare_test.cpp  index_map_test.cpp  linear_map_test.cpp  linear_set_test.cpp  multi_index_test.cpp
tests/fixtures/core/: abc.xml  atleast.xml
tests/io/: CMakeLists.txt  test_io.cpp  test_io_basic_events_json.cpp  test_io_pla.cpp
tests/io/xml/: CMakeLists.txt  openpsa.cpp
tests/mef/: CMakeLists.txt  alignment_test.cpp  ccf_group_test.cpp  expression_test.cpp
tests/nbits/: CMakeLists.txt  test_concepts.cpp  test_nbits.cpp
tests/sampler/: CMakeLists.txt  test_sampler.cpp
